--- a/trunk/fxpresenter/nbproject/project.properties
+++ b/trunk/fxpresenter/nbproject/project.properties
@@ -44,7 +44,7 @@ jnlp.packEnabled=false
 jnlp.signed=false
 main.class=com.ubivent.fxpresenter.Main
 pack200.jar.compress=true
-platform.active=default_fx_platform
+platform.active=JavaFX_SDK_1.3
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
